--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -65,7 +65,7 @@ p {
 }
 
 [data-md-color-scheme="slate"] code:not(.md-code__content) {
-  background-color: #2b2332 !important;
+  background-color: #2b273f !important;
   color: #d6b3ff !important;
   border-radius: 4px !important;        /* 圆角大小 */
 }
